--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -6,7 +6,6 @@
 	display: flex;
 	width: 100vw;
 	height: 100vh;
-	//background-color: $c-bg; //#2018
 
 	.profiles-layout_absPos-container {
 		position: absolute;
@@ -53,7 +52,6 @@
 	width: $col-w * 5.5;
 	z-index: 10;
 	//border: 1px solid red;
-	//color: red;
 }
 
 // ================================================
@@ -80,7 +78,7 @@
 	margin-left: $col-w * 0.5;
 	padding-top: $row-h * 0.25;
 	color: $c-text-main;
-	border: 1px solid rgba(255,255,255,0.75);
+	//border: 1px solid rgba(255,255,255,0.75);
 
 	h1, h2, h3 {
 		color: $c-text-main;
@@ -99,45 +97,66 @@
 		background-size: 100%;
 	}
 
-	.profiles-msg-body {
+	.profiles-welcome  {
 		position: relative;
 		display: flex;
 		flex-flow: column nowrap;
-		justify-content: space-between;
+		justify-content: flex-start;
 		align-items: flex-start;
 		height: 100%;
 		width: 100%;
 		padding-top: $row-h * 0.25;
 		padding-left: 1em;
-		font-size: 1.2em;
-		border: 1px solid pink;
+		font-size: 1em;
+		//border: 1px solid pink;
 	
-		&.msg-selectProfile {}
-		&.msg-createProfile {}
-	
+		&.welcome_shouldSelectProfile {}
+		&.welcome_shouldCreateProfile {
+			button {
+				display: flex;
+				flex-flow: row nowrap;
+				justify-content: space-between;
+				align-items: center;
+				width: 100%;
+
+				color: $c-text-main;
+				margin: 2em 0;
+				padding: 1em 2em;
+				box-shadow: $itemShadow;
+			}
+		}
+		
+		div {
+			padding-top: 0.5em;
+			margin-bottom: 0.5em;
+		}
+
+		p {
+			margin-bottom: 0.5em;
+		}
+
 	} //.profiles-msg-body
 } // .profiles-noCard 
 
-.deco_top-line {
+.deco_top-line { // not in use
 	border-top: 1px solid white;
-	padding-top: 0.5em;
+	padding-top: 2em;
 }
 
 
 
-.profiles-card { // height: $row-h * 4.5;
+.p-card { // height: $row-h * 4.5;
 	display: flex;
 	flex-flow: column nowrap;
 	background-color: $white;
 	width: 100%;
 	height: $row-h * 4.5;
 	border-radius: 10px;
-	//box-shadow: $itemShadow;
 	box-shadow:2px 2px 4px rgba(0,0,0,0.25);
 }
 
 
-.card-head { // height: $row-h;
+.p-card_head { // height: $row-h;
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
@@ -173,6 +192,9 @@
 			button {
 				padding: 16px 32px;
 				border-radius: 10px;
+				font-size: 2em;
+				font-weight: 600;
+				color: $c-text-main;
 			}
 		}
 
@@ -192,12 +214,11 @@
 				color: $c-text-main;
 				font-weight: 400;
 			}
-
 		}
 	} // .card-headBox 	
 } // end card-head
 
-.card-head .card-navBox {
+.p-card_head .p-card_navBox {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-around;
@@ -226,11 +247,14 @@
 			border-bottom: 2px solid $c-text-main;	
 		}
 	}
-}
-.card-head .card-navBox--slp {
-	border-top: 2px solid $c-bronze-500;
-	border-bottom: 2px solid $c-bronze-500;
-}
+
+	&.p-card_navBox--slp {
+		border-top: 2px solid $c-bronze-500;
+		border-bottom: 2px solid $c-bronze-500;
+	}
+
+} // .p-card_head .p-card_navBox
+
 
 // -------------------------------------------
 // wrappers, not presentational, 
@@ -244,44 +268,6 @@
 @import 'card-templates/profiles_card-content';
 
 
-
-// ------------------------------
-// ------------------------------
-// Sorry these are divs. Its tedious to overwrite ionic's styles. If this causes probs, just let me know.
-
-// .r-btn {
-// 	display: flex;
-// 	flex-flow: row nowrap;
-// 	justify-content: space-around;
-// 	align-items: center;
-// 	text-align: center;
-// 	width: auto;
-// 	margin: 0 1em;
-// 	margin-right: 1em;
-// 	padding: 0.5em 1.35em;
-
-// 	border-radius: 10px;
-// 	background-color: #ACE2E5;
-// 	border-bottom: 1px solid #A1D3D3;
-// 	border-right: 1px solid #A1D3D3;
-// 	cursor: pointer;
-// }
-// .r-btn:active {
-// 	background-color: #D7F4F3;
-// }
-
-// .r-btn .btn-text {
-// 	font-size: 1em;
-// 	line-height: 1.5;
-// 	font-weight: 600;
-// 	color: $c-text-subtle;
-// 	text-decoration: none;
-// 	margin-right: 1em;
-// }
-
-// .r-btn i {
-// 	font-size: 2.5em;
-// }
 
 .sexBtn-row {
 	position: relative;
@@ -298,7 +284,21 @@
 	}
 }
 
+.testerIcon {
+	position: relative;
+	display: inline-block;
+	height: 28px;
+	width: 28px;
+	// margin-left: 1em;
+	background-image: url('../img/profiles/ico_star-line.svg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+	//border: 1px solid white;
+}
 
+// OLD STYLES --------------------------------------
+// keep these until you've figured out the Recordings card styles
 
 // .profiles-contentBox .radio-content .item-content {
 // 	padding-right: 0px;
