--- a/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
+++ b/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
@@ -1,3 +1,4 @@
+// LAYOUT ================================================
 .card-content {
 	position: relative;
 	display: flex;
@@ -18,9 +19,8 @@
 		width: 100%;
 		padding: 2.5em;
 		color: $c-text-main;
-		//padding-top: 2em;
 		//border: 1px solid red;
-		
+
 		h3 {
 			font-size: 1em;
 			color: $c-text-main;
@@ -42,43 +42,15 @@
 		border: 1px solid red;
 	}
 
-} //.card-body
+} //.card-content
 
 
-// RECORDINGS CARD =================================
+// SHARED UI ELEMENTS  =================================
+
+
+// INDIVIDUAL CARD STYLES ==========================
+@import 'profile/card-profile';
 @import 'recordings/card-recordings';
-
-
-// SLP CARD =================================
-.card-body.slpCard {
-	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
-	//justify-content: space-between;
-	justify-content: flex-start;
-
-	h3 {
-
-		margin-bottom: 1.5em;
-	}
-
-	button {
-		position: relative;
-		display: flex;
-		flex-flow: row nowrap;
-		justify-content: space-between;
-		align-items: center;
-		padding: 1em 2em;
-		margin-bottom: 1em;
-		width: 100%;
-		color: $c-text-main;
-	
-		i {
-			color: $c-text-main;
-		}
-	}
-}
-
-
-
-
+@import 'progress/card-progress';
+@import 'settings/card-settings';
+@import 'slp/card-slp';
