--- a/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
+++ b/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
@@ -34,7 +34,7 @@
 		justify-content: center;
 		width: 100%;
 		height: $row-h * 0.5;
-		//border-top: 1px solid lightGray;
+		border-top: 1px solid lightGray;
 	} // .card-foot
 
 
