--- a/staRt/www/states/root/profiles/card-templates/settings/_card-settings.scss
+++ b/staRt/www/states/root/profiles/card-templates/settings/_card-settings.scss
@@ -1,7 +1,7 @@
 // .card-body-settings {  // parent class
 // }
 
-.range-container {
+.card-body-settings .pro_range-container {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
@@ -22,20 +22,23 @@
 	}
 }
 
-// .res-lpcBox {
-// 	width: $col-w * 9;
-// 	height: $row-h * 3;
-// 	margin-top: $row-h * 0.25;
-// }
+.pro_lpcBox { // card width is ~ col-w * 5.5
+	width: 100%; //$col-w * 3;
+	height: $row-h * 1;
+	margin-top: 1em;
+  margin-bottom: 2em;
+  border: 1px solid lime;
+}
 
-// .resources .lpc-container {
-// 	height: $row-h * 3;
-// 	width: $col-w * 9;
-// 	//border: 1px solid lime;
+// .lpc-container {
+//   width: 100%; //$col-w * 3;
+// 	height: $row-h * 1;
+// 	// border: 1px solid red;
 // }
-
-// .resources #lpc-canvas-parentSize {
-// 	width: $col-w * 8.65;
-// 	// left: $col-w * 0.1;
-// 	height: $row-h * 2.5;
-// }
+//
+#lpc-canvas-parentSize {
+	width: 100%;
+	// left: $col-w * 0.1;
+	height: $row-h * 1;
+  border: 1px solid red;
+}
