--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -6,20 +6,23 @@ lpc-directive {
 	width: 100%;
   height: 100%;
   justify-content: space-around;
-	// border: 1px solid red;
+	border: 2px solid red;
 }
 
 .lpc-contentBox {
   width: 100%;
   height: 100%;
+	//border: 1px solid lime;
 }
 
 #lpc-canvas-parentSize {
 	z-index: 10;
 	width: 100%;
-	height: 88%;
+	height: 100%;
+	//height: 88%;
 	display: flex;
 	align-items: center;
+	//border: 1px solid cyan;
 
 	&.buttons_visible {
     //width: 88%;
@@ -32,17 +35,17 @@ lpc-directive {
 }
 
 .lpc-container {  /* This is the light blue box*/
-  position: relative;
-  width: 100%;
-	height: 460px;
-	margin: 0;
-	// padding: 0;
-	border-radius: 4px;
-	display: block;
-	background-color: #F0F9FC;
-	border: 15px solid #F0F9FC;
-	border-bottom: 25px solid #F0F9FC;
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
+  // position: relative;
+  // width: 100%;
+	// height: 460px;
+	// margin: 0;
+	// // padding: 0;
+	// border-radius: 4px;
+	// display: block;
+	// background-color: #F0F9FC;
+	// border: 15px solid #F0F9FC;
+	// border-bottom: 25px solid #F0F9FC;
+  // box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
 
   &.transparent-background {
     background-color: transparent;
@@ -54,7 +57,6 @@ lpc-directive {
 		height: $row-h * 2.5;
 		//border: 1px solid blue;
   }
-
 }
 
 .lpc-buttons {
@@ -62,11 +64,13 @@ lpc-directive {
 	position: absolute;
 	width: 12%;
   right: 0;
+	//border: 1px solid lime;
 }
 
 .reset-button {
 	margin-top: 0px;
   margin-right: 0px;
+	//border: 1px solid cyan;
 }
 
 // ================================================
@@ -81,6 +85,7 @@ lpc-directive {
   justify-content: space-between;
   align-items: flex-end;
   width: $col-w * 2;
+	border: 1px solid red;
 
   &.rateBtn-container {
     top: $row-h * 0.75;
