--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1047,12 +1047,11 @@ input, textarea {
   height: 16.66667vh;
   margin-top: 1em;
   margin-bottom: 2em;
-  border: 1px solid lime; }
-
-#lpc-canvas-parentSize {
-  width: 100%;
-  height: 16.66667vh;
-  border: 1px solid red; }
+  border-radius: 2px;
+  background-color: rgba(194, 242, 242, 0.5); }
+  .pro_lpcBox #lpc-canvas-parentSize {
+    width: 100%;
+    height: 100%; }
 
 .card-body-slp {
   position: relative;
@@ -1511,8 +1510,27 @@ div.needleBox {
     justify-content: space-between;
     align-items: center;
     z-index: 10; }
-  .free-layout_view-container .free-lpcBox {
-    width: 100%; }
+
+.free-lpcFrame {
+  position: relative;
+  width: 100%;
+  height: 460px;
+  border-radius: 6px;
+  display: block;
+  background-color: #F0F9FC;
+  border: 15px solid #F0F9FC;
+  border-bottom: 25px solid #F0F9FC;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25); }
+  .free-lpcFrame .free-lpcBox {
+    width: 100%;
+    height: 405px;
+    background-color: #c5f3ff; }
+    .free-lpcFrame .free-lpcBox .reset-button {
+      margin-top: -15vh;
+      border-radius: 4px;
+      background-color: white;
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+      z-index: 100; }
 
 .quest-layout_view-container {
   position: relative;
@@ -1650,7 +1668,22 @@ div.needleBox {
   font-size: 30px; }
 
 .quest-practice-page {
-  height: 100%; }
+  position: relative;
+  height: 100%;
+  width: 100%; }
+
+.quest-lpcDir-layout {
+  position: absolute;
+  display: block;
+  height: 100%;
+  width: 100%; }
+  .quest-lpcDir-layout lpc-directive div.lpc-contentBox div#lpc-canvas-parentSize {
+    position: relative;
+    top: 41.66667vh;
+    left: 16.66667vw;
+    height: 41.66667vh;
+    width: 58.33333vw;
+    border: 1px solid blue; }
 
 .resources-layout_view-container {
   position: relative;
@@ -1822,7 +1855,8 @@ lpc-directive {
   flex-flow: row;
   width: 100%;
   height: 100%;
-  justify-content: space-around; }
+  justify-content: space-around;
+  border: 2px solid red; }
 
 .lpc-contentBox {
   width: 100%;
@@ -1831,7 +1865,7 @@ lpc-directive {
 #lpc-canvas-parentSize {
   z-index: 10;
   width: 100%;
-  height: 88%;
+  height: 100%;
   display: flex;
   align-items: center; }
   #lpc-canvas-parentSize.buttons_visible.beachpost-aligned {
@@ -1839,17 +1873,7 @@ lpc-directive {
     width: 100%; }
 
 .lpc-container {
-  /* This is the light blue box*/
-  position: relative;
-  width: 100%;
-  height: 460px;
-  margin: 0;
-  border-radius: 4px;
-  display: block;
-  background-color: #F0F9FC;
-  border: 15px solid #F0F9FC;
-  border-bottom: 25px solid #F0F9FC;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15); }
+  /* This is the light blue box*/ }
   .lpc-container.transparent-background {
     background-color: transparent;
     border: none;
@@ -1876,7 +1900,8 @@ lpc-directive {
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: flex-end;
-  width: 16.66667vw; }
+  width: 16.66667vw;
+  border: 1px solid red; }
   .button-side-container.rateBtn-container {
     top: 12.5vh;
     height: 33.33333vh; }
@@ -2043,9 +2068,10 @@ lpc-directive {
 .coin-row-layout {
   position: absolute;
   top: 83.33333vh;
-  left: 25vw;
+  left: 16.66667vw;
   width: 58.33333vw;
-  height: 13.33333vh; }
+  height: 13.33333vh;
+  border: 1px solid red; }
 
 .coinBox-layout {
   text-align: left;
