--- a/staRt/www/states/root/free-play/_free_styles.scss
+++ b/staRt/www/states/root/free-play/_free_styles.scss
@@ -1,7 +1,6 @@
 // ================================================
 // LAYOUT
 // ================================================
-
 .free-layout_view-container {
 	position: relative;
   display: flex;
@@ -32,15 +31,38 @@
     align-items: center;
 		z-index: 10;
 		// border: 1px solid cyan;
-  }
-
-  .free-lpcBox {
-    width: 100%;
-  }
-}
+	} // .free-layout_content-container
+} // .free-layout_view-container
 
 // ================================================
 // STATE STYLES
 // ================================================
 
 .free-header {}
+
+
+.free-lpcFrame {
+	position: relative;
+	width: 100%;
+	height: 460px;
+	border-radius: 6px;
+	display: block;
+	background-color: #F0F9FC;
+	border: 15px solid #F0F9FC;
+	border-bottom: 25px solid #F0F9FC;
+	box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+
+	.free-lpcBox {
+		width: 100%;
+		height: 405px;
+		background-color: $blue-light;
+
+		.reset-button { // adds to base styles from lpc-directive
+			margin-top: $row-h * -0.9;
+			border-radius: 4px;
+			background-color: white;
+			box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+			z-index: 100;
+		}
+	} //.free-lpcBox
+} // .free-lpcFrame
