--- a/staRt/www/states/root/profiles/card-templates/settings/_card-settings.scss
+++ b/staRt/www/states/root/profiles/card-templates/settings/_card-settings.scss
@@ -23,22 +23,17 @@
 }
 
 .pro_lpcBox { // card width is ~ col-w * 5.5
-	width: 100%; //$col-w * 3;
+	width: 100%;
 	height: $row-h * 1;
 	margin-top: 1em;
   margin-bottom: 2em;
-  border: 1px solid lime;
-}
+  border-radius: 2px;
+  background-color: rgba(194,242,242, 0.5); //#c2f2f2;
+  //border: 1px solid lime;
 
-// .lpc-container {
-//   width: 100%; //$col-w * 3;
-// 	height: $row-h * 1;
-// 	// border: 1px solid red;
-// }
-//
-#lpc-canvas-parentSize {
-	width: 100%;
-	// left: $col-w * 0.1;
-	height: $row-h * 1;
-  border: 1px solid red;
+  #lpc-canvas-parentSize {
+  	width: 100%;
+    height: 100%;
+    //border: 1px solid blue;
+  }
 }
