Fixes sizing issues with wave in different layouts. I'll put a note about this in gh.

--- a/staRt/www/common-styles/_ui.scss
+++ b/staRt/www/common-styles/_ui.scss
@@ -1,13 +1,11 @@
-button
-{
+button {
 	font-weight: bold;
 }
 
 // Slider
 
-.range
-{
-	padding: 1em;
+.range {
+	//padding: 1em;
 }
 
 input[type=range] {
