--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -1,4 +1,8 @@
-lpc-directive {
+// ================================================
+// LAYOUT
+// ================================================
+
+lpc-directive { // Parent ele. Layout class.
 	display: -webkit-flex;
 	-webkit-flex: 1;
 	margin: auto;
@@ -6,35 +10,40 @@ lpc-directive {
 	width: 100%;
   height: 100%;
   justify-content: space-around;
-	border: 2px solid red;
+	//border: 1px solid red;
+
+	.lpc-contentBox { // Container class.
+		// Holds LPC and any .button-side-containers
+	  width: 100%;
+	  height: 100%;
+		//border: 1px solid lime;
+	}
 }
 
-.lpc-contentBox {
-  width: 100%;
-  height: 100%;
-	//border: 1px solid lime;
-}
-
+// Should always be desc. of .lpc-contentBox
+// Generic responsive styles are set here.
+// NB: Downstream stylesheets (Profiles, Tutorial, & Practice-Directive) use this id to set canvas size and position from within their layout.
 #lpc-canvas-parentSize {
 	z-index: 10;
 	width: 100%;
 	height: 100%;
-	//height: 88%;
 	display: flex;
 	align-items: center;
 	//border: 1px solid cyan;
 
-	&.buttons_visible {
-    //width: 88%;
+	// &.buttons_visible {  #toDelete
+  //   //width: 88%;
+	//
+  //   // &.beachpost-aligned {
+	// 	// 	height: 100%;
+	// 	// 	width: 100%;
+  //   // }
+  // }
 
-    &.beachpost-aligned {
-			height: 100%;
-			width: 100%;
-    }
-  }
 }
 
-.lpc-container {  /* This is the light blue box*/
+// .lpc-container { //#toDelete
+	/* This is the light blue box*/
   // position: relative;
   // width: 100%;
 	// height: 460px;
@@ -47,25 +56,25 @@ lpc-directive {
 	// border-bottom: 25px solid #F0F9FC;
   // box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
 
-  &.transparent-background {
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-		top: $row-h * 2.5;
-		left: $col-w * 2;
-		width: $col-w * 7;
-		height: $row-h * 2.5;
-		//border: 1px solid blue;
-  }
-}
+//   &.transparent-background {
+//     background-color: transparent;
+//     border: none;
+//     box-shadow: none;
+// 		top: $row-h * 2.5;
+// 		left: $col-w * 2;
+// 		width: $col-w * 7;
+// 		height: $row-h * 2.5;
+// 		//border: 1px solid blue;
+//   }
+// }
 
-.lpc-buttons {
-	display: inline-block;
-	position: absolute;
-	width: 12%;
-  right: 0;
-	//border: 1px solid lime;
-}
+// .lpc-buttons { // are the still in use?
+// 	display: inline-block;
+// 	position: absolute;
+// 	width: 12%;
+//   right: 0;
+// 	border: 1px solid lime;
+// }
 
 .reset-button {
 	margin-top: 0px;
@@ -85,7 +94,7 @@ lpc-directive {
   justify-content: space-between;
   align-items: flex-end;
   width: $col-w * 2;
-	border: 1px solid red;
+	//border: 1px solid red;
 
   &.rateBtn-container {
     top: $row-h * 0.75;
@@ -163,7 +172,6 @@ lpc-directive {
 		background-color: #efbd88;
 	}
  }
-
 
 // -------------------
 
