--- a/staRt/www/states/root/free-play/_free_styles.scss
+++ b/staRt/www/states/root/free-play/_free_styles.scss
@@ -55,10 +55,11 @@
 	.free-lpcBox {
 		width: 100%;
 		height: 405px;
+		padding-top: 35px;
 		background-color: $blue-light;
 
 		.reset-button { // adds to base styles from lpc-directive
-			margin-top: $row-h * -0.9;
+			margin-top: $row-h * -0.4;
 			border-radius: 4px;
 			background-color: white;
 			box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
