--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -156,66 +156,65 @@
 }
 
 
-.p-card_head { // height: $row-h;
+.p-card_head { // $row-h
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
+	justify-content: space-between;
+	align-items: flex-start;
 	width: 100%;
-	height: $row-h;
-	max-height: $row-h;
-	//border: 1px solid red;
+	height: $row-h; // * 0.75;
+	min-height: $row-h; // * 0.75;
+	max-height: $row-h; // * 0.75;
+	//border: 1px solid lime;
 
-	.card-headBox {
+	.card-headerBox {
 		position: relative;
 		display: flex;
-		flex-flow: column nowrap;
+		flex-flow: row nowrap;
 		justify-content: space-between;
-		align-items: flex-start;
+		align-items: flex-end;
 		height: $row-h * 0.75;
+		width: 100%;
+		padding-left: 2.5em;
 		padding-bottom: 0.25em;
 		color: $c-text-main;
-		flex-direction: row nowrap;
-		align-items: center;
 		//border: 1px solid blue;
 
-		.card-closeRow {
-			position: relative;
+		.card-titleBox {
 			display: flex;
-			flex-flow: row nowrap;
+			flex-flow: column nowrap;
 			justify-content: flex-end;
-			align-items: flex-start;
-			height: 33%;
-			width: 100%;
-			z-index: 20;
-			//border: 1px solid lightBlue;
-
-			button {
-				padding: 16px 32px;
-				border-radius: 10px;
-				font-size: 2em;
-				font-weight: 600;
-				color: $c-text-main;
-			}
-		}
-
-		.card-titleRow {
-			position: relative;
-			display: flex;
-			flex-flow: row nowrap;
-			justify-content: flex-start;
-			align-items: center;
-			height: 66%;
-			width: 100%;
-			padding: 0 2.5em;
-			//border: 1px solid lightBlue;
+			height: 100%;
+			flex-grow: 6;
+			//border: 1px solid red;
 
 			h1 {
+				text-align: left;
 				font-size: 1.5em;
+				width: 100%;
 				color: $c-text-main;
 				font-weight: 400;
 			}
-		}
-	} // .card-headBox
+		} // .card-titleBox
+
+		.card-closeBox {
+			display: flex;
+			height: 100%;
+			width: 64px;
+			//border: 1px solid red;
+
+			button {
+				height: 100%;
+				width: $row-h * 0.5;
+				border-radius: 10px;
+				font-size: 2.5em;
+				font-weight: 600;
+				color: $c-text-main;
+			}
+		} // .card-closeBox
+
+	} // .card-headerBox
 } // end card-head
 
 .p-card_head .p-card_navBox {
@@ -224,6 +223,7 @@
 	justify-content: space-around;
 	align-items: center;
 	height: $row-h * 0.25;
+	min-height: $row-h * 0.25;
 	width: 100%;
 	border-top: 2px solid $c-lightBlue;
 	border-bottom: 2px solid $c-lightBlue;
@@ -232,16 +232,18 @@
 		display: flex;
 		flex-flow: column nowrap;
 		justify-content: center;
-		height: $row-h * 0.25;
+		height: 100%;
+		//height: $row-h * 0.25;
 		padding: 0em 1em;
 		color: $c-text-main;
 		font-size: 0.9em;
 		font-weight: 400;
-		border-top: 2px solid $c-lightBlue;
-		border-bottom: 2px solid $c-lightBlue;
+		// border-top: 2px solid $c-lightBlue;
+		// border-bottom: 2px solid $c-lightBlue;
 
 		&.pro_navitem--active {
-			height: $row-h * 0.25;
+			height: 100%;
+			//height: $row-h * 0.25;
 			font-weight: 700;
 			border-top: 2px solid $c-text-main;
 			border-bottom: 2px solid $c-text-main;
