--- a/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
+++ b/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
@@ -37,9 +37,9 @@
 	} // .card-foot
 
 
-	ion-radio {
-		border: 1px solid red;
-	}
+	// ion-radio {
+	// 	border: 1px solid red;
+	// }
 
 } //.card-content
 
