--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1831,53 +1831,69 @@ div.needleBox {
       background-color: #bfdddc;
       color: #666666; }
 
+/*
 .resources .back-btn {
-  background: #d3d3d3;
-  color: #808080;
-  position: relative;
-  top: -4.16667vh;
-  float: right;
-  height: auto;
-  width: 64px;
-  padding: 10px;
-  z-index: 100000; }
+	background: #d3d3d3;
+	color: #808080;
+	position: relative;
+	top: $row-h * -0.25;
+	float: right;
+	height: auto;
+	width: 64px;
+	padding: 10px;
+	z-index: 100000;
+}
 
-.range-container {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: flex-end; }
+.range-container
+{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-items: flex-end;
+}
 
-.range-label {
-  line-height: 100%;
-  font-weight: bold;
-  width: 40px;
-  white-space: pre-line;
-  padding: 1em 0;
-  font-size: 0.9rem; }
-  .range-label:first-child {
-    padding-left: 0; }
+.range-label
+{
+	line-height: 100%;
+	font-weight: bold;
+	width: 40px;
+	white-space: pre-line;
+	padding: 1em 0;
+	font-size: 0.9rem;
+
+	&:first-child
+	{
+		padding-left: 0;
+	}
+}
 
 .resources strong {
-  display: block;
-  color: #53c8e9; }
+	display: block;
+	color: $blue-main;
+}
 
 .resources p {
-  margin: 0; }
+	margin: 0;
+}
 
 .res-lpcBox {
-  width: 75vw;
-  height: 50vh;
-  margin-top: 4.16667vh; }
+	width: $col-w * 9;
+	height: $row-h * 3;
+	margin-top: $row-h * 0.25;
+}
 
 .resources .lpc-container {
-  height: 50vh;
-  width: 75vw; }
+	height: $row-h * 3;
+	width: $col-w * 9;
+	//border: 1px solid lime;
+}
 
 .resources #lpc-canvas-parentSize {
-  width: 72.08333vw;
-  height: 41.66667vh; }
-
+	width: $col-w * 8.65;
+	// left: $col-w * 0.1;
+	height: $row-h * 2.5;
+}
+*/
 lpc-directive {
   display: -webkit-flex;
   -webkit-flex: 1;
