--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -166,6 +166,7 @@
 
 // ------------------------------
 // resources adjust LPC page
+/*
 .resources .back-btn {
 	background: #d3d3d3;
 	color: #808080;
@@ -227,3 +228,4 @@
 	// left: $col-w * 0.1;
 	height: $row-h * 2.5;
 }
+*/
