--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -29,52 +29,7 @@ lpc-directive { // Parent ele. Layout class.
 	height: 100%;
 	display: flex;
 	align-items: center;
-	//border: 1px solid cyan;
-
-	// &.buttons_visible {  #toDelete
-  //   //width: 88%;
-	//
-  //   // &.beachpost-aligned {
-	// 	// 	height: 100%;
-	// 	// 	width: 100%;
-  //   // }
-  // }
-
 }
-
-// .lpc-container { //#toDelete
-	/* This is the light blue box*/
-  // position: relative;
-  // width: 100%;
-	// height: 460px;
-	// margin: 0;
-	// // padding: 0;
-	// border-radius: 4px;
-	// display: block;
-	// background-color: #F0F9FC;
-	// border: 15px solid #F0F9FC;
-	// border-bottom: 25px solid #F0F9FC;
-  // box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
-
-//   &.transparent-background {
-//     background-color: transparent;
-//     border: none;
-//     box-shadow: none;
-// 		top: $row-h * 2.5;
-// 		left: $col-w * 2;
-// 		width: $col-w * 7;
-// 		height: $row-h * 2.5;
-// 		//border: 1px solid blue;
-//   }
-// }
-
-// .lpc-buttons { // are the still in use?
-// 	display: inline-block;
-// 	position: absolute;
-// 	width: 12%;
-//   right: 0;
-// 	border: 1px solid lime;
-// }
 
 .reset-button {
 	margin-top: 0px;
@@ -173,8 +128,9 @@ lpc-directive { // Parent ele. Layout class.
 	}
  }
 
-// -------------------
-
+ // ================================================
+ // SLIDER & SAND
+ // ================================================
 
 .lpc-range {
 	height: 400px;
